# iSafeRM

./: Makefile  README.md  environment.yml  readme.md
.tmp/.social_network_tmp/: compose_post_redis.conf  home_timeline_redis.conf  media_mongodb.conf  social_graph_mongodb.conf  social_graph_redis.conf  swarm-composepost.yml  swarm-frontend.yml  swarm.yml  url_shorten_mongodb.conf  user_mongodb.conf  user_timeline_redis.conf
configs/: key_config.csv
data/rca/: causal_graph.gml  ms_data.csv  top_services.json
data/replay/: replay.csv  wk20-sn.csv
deploy/social_network/docker-swarm/volumes/openresty-thrift/lua-thrift/: GenericObjectPool.lua  Makefile.am  Object.lua  RpcClient.lua  RpcClientFactory.lua  TBinaryProtocol.lua  TBufferedTransport.lua  TCompactProtocol.lua  TFramedTransport.lua  THttpTransport.lua  TJsonProtocol.lua  TProtocol.lua  TSocketSSL.lua  TTransport.lua  Thrift.lua
deploy/social_network/docker-swarm/volumes/openresty-thrift/lua-thrift/src/: longnumberutils.c  luabitwise.c  luabpack.c  lualongnumber.c  luasocket.c  socket.h  usocket.c
output/: config.pkl
output/results/: best.yml
tunning/: constants.py  safescaler.py  safetuning.py  test.py  utils.py
tunning/PBSLocator/: find_key_services.py  rca.py
tunning/PCPIdenter/: causal_model.py  causal_param.ipynb  my_cdnod.py
tunning/bench/: abstract.py  exceptions.py  microservices_benchmark.py
tunning/benchenvs/: microservices_env.py  microservices_env_backup.py  microservices_env_offline.py
tunning/datacollector/: metrics_collector.py  prometheus_deploy.py  traceProcessor.py  (+1 more)
(+356 files in other folders)
